--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="display_map">Display Map !</string>
     <string name="title_activity_place_picker">PlacePicker</string>
     <string name="display_place_picker">Display place picker !</string>
+    <string name="pick_place">Choose a place</string>
+    <string name="default_info_title">Default Location</string>
+    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
+
 </resources>
